connected database with the server